--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ serde_json = { version = "1.0.141" }
 simple_logger = { version = "5.0.0" }
 thiserror = { version = "2.0.12" }
 needletail = { version = "0.6.3" }
-memchr = {version = "2.7.5"}
+memchr = { version = "2.7.5" }
+rand = { version = "0.9.2" }
