--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ thiserror = { version = "2.0.12" }
 needletail = { version = "0.6.3" }
 memchr = { version = "2.7.5" }
 rand = { version = "0.9.2" }
+rstest = { version = "0.26.1" }
