--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.141" }
 simple_logger = { version = "5.0.0" }
 thiserror = { version = "2.0.12" }
+anyhow = {version = "1.0.99"}
 needletail = { version = "0.6.3", features = ["compression"] }
 memchr = { version = "2.7.5" }
 rand = { version = "0.9.2" }
