--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.141" }
 simple_logger = { version = "5.0.0" }
 thiserror = { version = "2.0.12" }
-anyhow = {version = "1.0.99"}
+anyhow = { version = "1.0.99" }
 needletail = { version = "0.6.3", features = ["compression"] }
 memchr = { version = "2.7.5" }
 rand = { version = "0.9.2" }
 rstest = { version = "0.26.1" }
+regex = { version = "1.11.2" }
