--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,19 @@
 name = "fasta_rs"
 version = "0.0.1"
 edition = "2024"
+authors = ["oscar.aspelin@gmail.com"]
+description = "Multi purpose fasta toolkit"
+license = "Apache-2.0"
+repository = "https://github.com/OscarAspelin95/fasta_rs"
+keywords = ["bioinformatics", "fasta"]
+categories = ["command-line-utilities"]
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+name = "fasta_rs"
+path = "src/main.rs"
 
 [dependencies]
 bio = { version = "2.3.0" }
